Fix footer styling not being applied on mobile

--- a/src/styles/components/_footer.scss
+++ b/src/styles/components/_footer.scss
@@ -7,7 +7,7 @@ table.footer {
     padding-bottom: 10px;
 
     @include on-mobile {
-      padding-top: 52px;
+      padding-top: 52px !important;
       padding-bottom: 50px !important;
     }
   }
